--- a/starter-code/src/app/my-home/my-home.component.html
+++ b/starter-code/src/app/my-home/my-home.component.html
@@ -1,11 +1,23 @@
-<h1>
-My Cinema Board: 
-  </h1>
-<section>
 
-    <div class="list-movies" *ngFor="let movie of  moviesList.getMovies()">
-      <h2>Room: {{movie.room}}</h2>
-      <img src="{{movie.poster}}" alt="{{movie.title}}">
-      <h2><a [routerLink]="['../movie', movie.id]" >{{movie.title}}</a></h2>
-    </div>
+<section>
+    <h2>My cinema board</h2>
+    <div class="row">
+     
+        <div *ngFor="let movie of  moviesList.getMovies()" class="col s12 m2">
+          <div class="card">
+            <div class="card-image">
+              <img src="{{movie.poster}}" alt="{{movie.title}}">
+            </div>
+            <div class="card-action">
+                <a [routerLink]="['../movie', movie.id]">{{movie.title}}</a>
+            </div>
+            <div class="card-content">
+          
+              <p>Room: {{movie.room}}</p>
+            </div>
+            
+          </div>
+        </div>
+      </div>
 </section>
+
